Update the links.

--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -11,10 +11,10 @@
     <div id="nav">
       Team Member
       <ul>
-        <li><a href="zhen.html">Zhen</a></li>
-        <li><a href="bei.html">Bei</a></li>
-        <li><a href="han.html">Han</a></li>
-        <li><a href="mark.html">Mark</a></li>
+        <li><a href="https://alejwang.github.io/ICE1/zhen.html">Zhen</a></li>
+        <li><a href="https://bjin02.github.io/ice1/bei.html">Bei</a></li>
+        <li><a href="https://toaruc.github.io/ICE1/han.html">Han</a></li>
+        <li><a href="https://markinsane.github.io/LEC1/lec.html">Mark</a></li>
       </ul>
     </div>
 
