--- a/index.html
+++ b/index.html
@@ -95,17 +95,22 @@
 
         <div id="about">
           <h2>Alejandro </h2>
-          <h3>Synthesized project I've been working on for 24 years.<br>... all right you catch ME! </h3>
+          <h3>A synthesized project I've been working on for 24 years.<br>... all right you catch ME! </h3>
           <p>
             <br> -
-            <br> Hey, my name is Zhen Wang. My friends call me Alejandro.<br><br> Once upon a time <br> I was a coder at the beginning. I was a exploring architect. I like combination beauty between technology and design. Because once they being together,
-            the mixing magic can make life easier and joyful. That’s why I am now learning Human Computer Interaction at University of Michigan, Ann Arbor.<br> I started a start-up focus on online education before in China. When I was young, I got help
-            from useful but unusable online tools to learning coding. So the vision of my company Zhimou Tech Inc (name means intelligence) was to help new coding learners to get on the right track and share ideas with the others by new technology and
-            enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management. I always want to expand myself with more skills and knowledge. But my focus is still design - the only thing I urge
-            to dig in forever.<br><br> For now <br> I am still exploring the world of coding and designing at the same time, especially the method of interaction design, user research, usability test, prototype coding and more at school. By some small
-            projects, I realize my efforts can really work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and wider. To be what’s next, originally by Microsoft,
-            is really a hard thing to say but my thinking. Even though I realize changing the status quo sometimes hurts and the ideas won’t come true immediately, to design for a better future never goes wrong.<br><br> Looking for internship! <br> Design
-            for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to achieve. I'm graduating in April 2019 and looking for open people
+            <br> Hey, my name is Zhen Wang. My friends call me Alejandro.<br><br>
+
+            <strong>Once upon a time</strong>  <br>
+            I was a <strong>coder</strong> at the beginning. I was an exploring <strong>architect</strong>. I like combination beauty between technology and design. Because once they being together,
+            the mixing magic can make life easier and joyful. That’s why I am now learning <strong>Human-Computer Interaction at University of Michigan, Ann Arbor</strong>.<br>
+            I started a <strong>start-up</strong> focus on online education before in China. When I was young, I got help from useful but unusable online tools for learning to code. So the vision of my company Zhimou Tech Inc (the name means intelligence) was to help new coding learners to get on the right track and share ideas with the others by new technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management. I always want to expand myself with more skills and knowledge. But my focus is still design - the only thing I urge to dig in forever.<br><br>
+
+            <strong>For now</strong>  <br>
+            I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype coding</strong> and more at school. By some small
+            projects, I realize my efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. <strong>To be what’s next</strong>, is a hard thing to say. Even though I realize changing the status quo sometimes hurts, and the ideas won’t come true immediately, to design for a better future never goes wrong.<br><br>
+
+            <strong>Looking for an internship!</strong> <br>
+            Design for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to achieve. I'm graduating in <strong>April 2019</strong> and looking for open and fun people
             to work with in summer 2018!
             <a href="mailto:alejwang@umich.edu?subject=Hello">SAY HI!</a></p>
           <!-- <div class="sociallinks">
