--- a/inforest/index.html
+++ b/inforest/index.html
@@ -140,7 +140,7 @@
 			<!-- Conception -->
 			<section id="conception" class="main">
 				<h2>_conception</h2>
-				<h3>By designing different interaction on different height,<br> Inforest tend to simulate the nature's feeling</h3>
+				<h3>by designing different interaction on different height,<br> Inforest tend to simulate the nature's feeling</h3>
 				<div class="row">
 
 					<div class="9u$ -3u 12u$(medium)">
@@ -198,7 +198,7 @@
 					</div>
 				</div>
 				<hr>
-				<h3>also we had the small space Inforest <br>well-designed and built... as a model. </h3>
+				<h3>also we had the small space Inforest <br>well-designed and built... as a model </h3>
 
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
@@ -239,7 +239,8 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p><a href="../index.html">back to home</a></p>
+			<p><a href="../index.html">< back to home</a></p>
+			<p class="right"> <a href="../mobile/">next project: QSC Mobile ></a> </p>
 
 			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
