--- a/mobile/index.html
+++ b/mobile/index.html
@@ -264,6 +264,13 @@
 			<!-- Closerlook -->
 			<section id="closerlook" class="main">
 				<h2>_closer look</h2>
+				<h3>from courses in the moring <br>to activities at the night, <br>Mobile will be with you in every moment</h3>
+				<div class="row">
+					<div class="10u -2u 12u$(medium)">
+						<iframe width="853" height="480" src="https://www.youtube.com/embed/24HFhpKGtkQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
+				<hr>
 				<h3>our interaction design <br>is made more quick and intuitive </h3>
 
 				<div class="row">
@@ -352,8 +359,10 @@
 
 
 		<!-- Footer -->
+
 		<footer id="footer">
-			<p><a href="../index.html">back to home</a></p>
+			<p><a href="../index.html">< back to home</a></p>
+			<p class="right"> <a href="../smartpill/">next project: Smartpill ></a> </p>
 
 			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
