--- a/smartpill/index.html
+++ b/smartpill/index.html
@@ -33,23 +33,24 @@
 	<div id="wrapper">
 
 		<!-- Header -->
-		<header id="header" style="background-color:#C6BDAC;" class="alt">
+		<header id="header" style="background-color:#F1FAF6;" class="alt">
 			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-			<h1>Smartpill</h1>
-			<p>Need to be update</p>
+			<h1>Pocket Pharmacist</h1>
+			<p>Smartpill - new-style business model providing <br>self-diagnostics and drug use inquiry services for not serious patients</p>
+
 		</header>
 		<section id="header-img" class="main">
-			<span class="image main"><img src="images/smartpill_header.png" alt="" /></span>
+			<span class="image main"><img src="images/smartpill_header.jpg" alt="" /></span>
 		</section>
 
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
 				<li><a href="#intro" class="active">intro</a></li>
-				<li><a href="#tech_research">tech research</a></li>
-				<li><a href="#conception">conception</a></li>
-				<li><a href="#prototype">prototype</a></li>
-				<li><a href="#result">result</a></li>
+				<li><a href="#analysis">analysis</a></li>
+				<li><a href="#model">model</a></li>
+				<li><a href="#strategy">strategy</a></li>
+				<li><a href="#wireframe">wireframe</a></li>
 			</ul>
 		</nav>
 
@@ -60,16 +61,15 @@
 
 				<div class="row">
 					<div class="6u 12u$(medium)">
-						<p><strong>_role</strong> As an interaction designer and architect, I mainly came up with ideas and conceptions base on technology research and then transferred the concepts into prototypes. As a work team, we designed, prototyped, tested and launched
-							the InForest, an urban public breathing space where people could interact with plants just like in a forest.
+						<p><strong>_role</strong> As the team leader, I conducted business research with my teammates together to come up with market positioning, business model innovation and marketing strategy. I was in charge of the project progress, information structure and presentation.
 						</p>
 					</div>
 					<div class="6u$ 12u$(medium)">
 						<ul class="alt">
-							<li><strong>_duration</strong> 5/ 2016 - 11/ 2016.</li>
-							<li><strong>_program</strong> Student Research Training Program, Zhejiang University</li>
-							<li><strong>_partners</strong> <a href="http://www.xushenghu.com">Charles Hu (Design Leader)</a>, Siyu Lei (Engineer)</li>
-							<li><strong>_scope</strong> Technology Research, Engineering, Interaction Design, Architecture Design</li>
+							<li><strong>_duration</strong> 3/ 2015 - 6/ 2015.</li>
+							<li><strong>_course</strong> Chinese Business Culture and Entrepreneurship, Zhejiang University</li>
+							<li><strong>_partners</strong> Maggie Long, Zheng Shen, Yan Li</li>
+							<li><strong>_scope</strong> Research, Business Process Design, Strategy, UI Design</li>
 						</ul>
 					</div>
 				</div>
@@ -78,168 +78,74 @@
 			<!-- Intro -->
 			<section id="intro" class="main">
 				<h2>_introducing</h2>
-				<h3>the forest is disappearing <br>and the urban citizens are lost</h3>
-				<div class="row">
-					<span class="image alt"><img src="images/inforest_intro.png" alt="" /></span>
-					<div class="9u$ -3u 12u$(medium)">
-						<p>People need the forest. For people who forgot already, we should let them remember the feeling of nature. </p>
-						<p>Imagine if you were leisurely sauntering in a forest, taking in all the sights, sounds and smells of nature. It will the most welcome when you get tired of city’s noise. The concept of InForest originated to produce an interactive, experiential
-							system arousing urban people the sensation of the forest. </p>
-						<p>Our work started with analyzing the vertical structure of the forest which contributes to people’ s multi-layer sensory experience in the forest. Then we abstracted specific sounds from each layer of the following design. </p>
-
-						<div class="row">
-							<div class="6u 12u$(medium)">
-								<span class="image fit"><img src="images/inforest_urban.png" alt="" /></span>
-								<h4>urbanization + nature = ?</h4>
-								<p>China is experiencing the fastest and highest urbanization in the world, which leaves many thorny nature problems like air pollution, dense traffic, and more notably increasing pressure on people. Not surprisingly, urban people are eager to get
-									away from cities and get close to the wild nature without haze once they have a chance. </p>
-							</div>
-							<div class="6u$ 12u$(medium)">
-								<span class="image fit"><img src="images/inforest_screen.png" alt="" /></span>
-								<h4>interaction = screen ?</h4>
-								<p>As informative transformation goes further and more profound, whereas ubiquitous screen-based user interfaces have profoundly changed people’s lives, it is estranging people from the real physical world. This context urges me to rethink interaction
-									design on a more significant scale-to design interactive system or environment where people are naturally immersed in. </p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<p><a href="#prototype">skip to see the prototype ></a></p>
-
-			</section>
-
-			<!-- Tech-Research -->
-			<section id="tech_research" class="main">
-				<h2>_interactive technology research</h2>
-				<h3>we use technology from Disney + CMU <br>to inspire us to capture small signals <br>created by touching the plants</h3>
+				<h3>China's hospital medical resourse is scarce <br>and the young generation usually don't go to hospital, <br>that's why pharmacist became important</h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
-						<span class="image alt"><img src="images/inforest_principle.png" alt="" /></span>
-
-						<p>We use the technology called Swept Frequency Capacitive Sensing Technique from Disney Research and Carnegie Mellon University (Touché: Enhancing Touch Interaction on Humans, Screens, Liquids, and Everyday Objects) </p>
-
-						<p>To build the sensing system, a single conductive wire links the soil or water to our sensor controller. Through dynamic signal analysis, the sensing system could detect and recognize people’s different interactions (e.g., approach, touch, etc.)
-							with plants.</p>
+						<p>China's hospital medical resourse is scarce to afford billions people's daily health care. According to the research in 2014, the number of doctors per 10000 citizen was only 21 and the average waiting time in 3A hospital was half an hour. The bad condition brings patients miserable experience and risk to give wrong diagnose. </p><p>The youngs in China is becoming unwilling to go to hospital and wait in long queue if they feel not that bad. To deal with sight illness or their occupational disease, they buy themselves pills by parents' experience or searching on the Internet. But both way are not safe. Cold with similar symptom can be the wind-cold, wind-heat or rheumatism-cold type which mess people deeply. With increasing mobile medical market and new technology, there should be a better way to improve the experience and accuracy in self-diagnostics. </p>
 					</div>
 				</div>
 				<hr>
-
-				<h3>then by gestures classification experiment, <br>we selected suitable plants and <br>got valuable coefficient in results</h3>
-
-				<div class="row">
-					<span class="image alt"><img src="images/inforest_exp.png" alt="" /></span>
-					<div class="9u$ -3u 12u$(medium)">
-						<p>Gestures classification was the next step to enhance plants with rich touch and gesture interactivity. Each transmission from the sensor contained a 160-point capacitive profile from which we extracted a series of features for classification.
-						</p>
-						<p>
-							After more than 400 times classification accuracies tests for different kinds of plants, we select reliable controlling gestures with accuracies over 80% of each plant for the following application.
-						</p>
-					</div>
-				</div>
+				<h3>so we came up with the idea for patents <br>to create or get possible medical resourse <br>on their phone with Smartpill</h3>
+				<p><a href="#model">skip to see the model ></a></p>
 			</section>
 
-			<!-- Conception -->
-			<section id="conception" class="main">
-				<h2>_conception</h2>
-				<h3>By designing different interaction on different height,<br> Inforest tend to simulate the nature's feeling</h3>
+			<!-- Analysis -->
+			<section id="analysis" class="main">
+				<h2>_market analysis</h2>
+				<h3>before we started, we need to analysis <br>the pest + market resources to make sure <br>if there's a possible market</h3>
 				<div class="row">
-
-					<div class="9u$ -3u 12u$(medium)">
-						<span class="image alt"><img src="images/inforest_levels.png" alt="" /></span>
-						<div class="row">
-							<div class="6u 12u$(medium)">
-
-								<h4>Bird + Wind</h4>
-								<p>People could control the volume of the sound of birds by changing the distance from their hands to the plants. When they touch the plants, they will hear all the birds scatter away suddenly, and they need to move to another location to listen
-									to those birds singing again.</p>
-							</div>
-							<div class="6u$ 12u$(medium)">
-								<h4>Cicadas</h4>
-								<p>On this floor, people could rest under a tree of cicadas sounds. The sound could be gradually stopped by pinching the leaves.</p>
-							</div>
-							<div class="6u 12u$(medium)">
-								<h4>Crickets + Frogs</h4>
-								<p>Interactive plants units are installed along the trails going upward. People would hear frogs and crickets sound when they walk on the trails and even hear frogs’ jumping into the water when they touch the plants.</p>
-							</div>
-							<div class="6u$ 12u$(medium)">
-								<h4>Streams</h4>
-								<p>The base of Inforest is an urban interactive public breathing space where people can participate. Our work taps into some of the most basic human instincts, to play and explore. It also generates talk value through a shared experience.</p>
-							</div>
-
-						</div>
-					</div>
-
-				</div>
-
-
-			</section>
-
-			<!-- Prototype -->
-			<section id="prototype" class="main">
-				<h2>_prototype</h2>
-				<div class="row">
-					<div class="9u$ -3u 12u$(medium)">
-						<iframe src="https://player.vimeo.com/video/202718376?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-					</div>
-				</div>
-				<hr>
-				<h3>thanks for our engineer friend, <br>we designed and made incredible interaction units that <br>can mount lots of plants with the watering system</h3>
-
-				<div class="row">
-					<div class="9u$ -3u 12u$(medium)">
-						<span class="image alt"><img src="images/inforest_pro0.png" alt="" /></span>
-						<div class="row">
-							<div class="6u 12u$(medium)">
-								<span class="image alt"><img src="images/inforest_pro1.png" alt="" /></span>
-							</div>
-							<div class="6u$ 12u$(medium)">
-								<p>The unit is designed to be low-cost and convenient to maintain and water plants. Also, it can be extended as long as the hanging hook is long enough.</p>
+					<div class="8u$ -4u 12u$(medium)">
+							<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
+							<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
+							<p><sup>*1 There is no specific law in mobile medical care in China. I use standards by FDA in the U.S. to classify apps in China.</sup></p>
+							<p><sup>*2 With traditional Chinese diagnostics, patients are more focus on their symptom instead of body index data. But most patients are likely to use western medicine.</sup></p>
 							</div>
 						</div>
-					</div>
-				</div>
+
 				<hr>
-				<h3>also we had the small space Inforest <br>well-designed and built... as a model. </h3>
-
-				<div class="row">
-					<div class="9u$ -3u 12u$(medium)">
-						<span class="image alt"><img src="images/inforest_model0.png" alt="" /></span>
-						<div class="row">
-							<div class="6u 12u$(medium)">
-								<span class="image alt"><img src="images/inforest_model1.jpg" alt="" /></span>
-							</div>
-							<div class="6u$ 12u$(medium)">
-								<span class="image alt"><img src="images/inforest_model2.jpg" alt="" /></span>
-								<p>Model only.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-
+				<h3>then we started to dig in <br>who can we serve and,<br>what can Smartpill do in capability </h3>
+				<span class="image alt"><img src="images/smartpill_target.png" alt="" /></span>
+				<hr>
+				<h3>in a word, <br>SmartPill offers self-diagnostics <br>and drug use inquiry services <br>for the young and mid-aged patients <br>with slight or chronic disease</h3>
 
 			</section>
 
-			<!-- Result -->
-			<section id="result" class="main">
-				<h2>_result</h2>
-				<h3>Although we didn't have the power to <br>build an architecture to provide an immersive experience, <br>
-					we believe our ideas will present our vision <br>and engage more people to work on the forest issue</h3>
-				<span class="image alt"><img src="images/inforest_hand.png" alt="" /></span>
+			<!-- business model -->
+			<section id="model" style="background-color: #111;" class="main">
+				<h2>_business model innovation</h2>
+				<h3 style="color:#ccc;">we spent a semester on business analysis <br>to make a more complete model <br>with possible resources </h3>
+				<span class="image alt"><img src="images/smartpill_model.png" alt="" /></span>
 				<hr>
+				<h3 style="color:#ccc;">as shown, we expand the partners to <br>medical companies and pharmacist union to <br>provide stable service and <br>collect more information in diagnostics database</h3>
+			</section>
 
+			<!-- strategy -->
+			<section id="strategy" class="main">
+				<h2>_strategy</h2>
+				<h3>by market research and survey, <br>we designed a marketing strategy in 4P frame <br>to make sure our target users are accurate</h3>
+				<span class="image alt"><img src="images/smartpill_strategy.png" alt="" /></span>
+			</section>
 
+			<!-- wireframe -->
+			<section id="wireframe" class="main">
+				<h2>_wireframe</h2>
+				<h3>to make it easy to understand, <br>we made a simple wireframe </h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
-						<span class="image alt"><img src="images/inforest_publish.jpg" alt="" /></span>
-						<p>Inforest was published as a conception design on DIP 2016 "The future we design".</p>
-						<p>Our team also patented our work (Patent Number: CN205508389U and CN201610178497.5) to provide the possibility to convert Inforest into commercial products in the future.</p>
+						<span class="image alt"><img src="images/smartpill_wf0.png" alt="" /></span>
+						<span class="image alt"><img src="images/smartpill_wf1.png" alt="" /></span>
 					</div>
 				</div>
 			</section>
+
+
 		</div>
 
 		<!-- Footer -->
+
 		<footer id="footer">
-			<p><a href="../index.html">back to home</a></p>
+			<p><a href="../index.html">< back to home</a></p>
+			<p class="right"> <a href="../mobile/">next project: Inforest ></a> </p>
 
 			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
