= fix header pic

--- a/smartpill/index.html
+++ b/smartpill/index.html
@@ -36,11 +36,10 @@
 		<header id="header" style="background-color:#F1FAF6;" class="alt">
 			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 			<h1>Pocket Pharmacist</h1>
-			<p>Smartpill - new-style business model providing <br>self-diagnostics and drug use inquiry services for not serious patients</p>
-
+			<p>Smartpill - new-style business model providing <br> self-diagnostics and drug use inquiry services for not serious patients <br> </p>
 		</header>
 		<section id="header-img" class="main">
-			<span class="image main"><img src="images/smartpill_header.jpg" alt="" /></span>
+			<span class="image main"><img src="images/smartpill_header.png" alt="" /></span>
 		</section>
 
 		<!-- Nav -->
