--- a/smartpill/index.html
+++ b/smartpill/index.html
@@ -23,27 +23,31 @@
 	<!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
 	<script src="../assets/js/works.js"></script>
 	<link rel="stylesheet" href="../assets/css/preloader.css">
-	<script src="../assets/js/plugins.js"></script>
 	<script src="../assets/js/main.js"></script>
 </head>
 
 <body>
 
+	<!-- Preloader -->
+	<div id="preloader">
+		<div id="loader" class="smartpill"></div>
+	</div>
+
 	<!-- Wrapper -->
 	<div id="wrapper">
 
 		<!-- Header -->
-		<header id="header" style="background-color:#F1FAF6;" class="alt">
+		<header id="header" class="smartpill alt">
 			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 			<h1>Pocket Pharmacist</h1>
 			<p>Smartpill - new-style business model providing <br> self-diagnostics and drug use inquiry services for not serious patients <br> </p>
 		</header>
-		<section id="header-img" class="main">
+		<section id="header-img" class="smartpill main">
 			<span class="image main"><img src="images/smartpill_header.png" alt="" /></span>
 		</section>
 
 		<!-- Nav -->
-		<nav id="nav">
+		<nav id="nav" class="smartpill">
 			<ul>
 				<li><a href="#intro" class="active">intro</a></li>
 				<li><a href="#analysis">analysis</a></li>
@@ -60,7 +64,8 @@
 
 				<div class="row">
 					<div class="6u 12u$(medium)">
-						<p><strong>_role</strong> As the team leader, I conducted business research with my teammates together to come up with market positioning, business model innovation and marketing strategy. I was in charge of the project progress, information structure and presentation.
+						<p><strong>_role</strong> As the team leader, I conducted business research with my teammates together to come up with market positioning, business model innovation and marketing strategy. I was in charge of the project progress, information structure
+							and presentation.
 						</p>
 					</div>
 					<div class="6u$ 12u$(medium)">
@@ -80,7 +85,11 @@
 				<h3>China's hospital medical resourse is scarce <br>and the young generation usually don't go to hospital, <br>that's why pharmacist became important</h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
-						<p>China's hospital medical resourse is scarce to afford billions people's daily health care. According to the research in 2014, the number of doctors per 10000 citizen was only 21 and the average waiting time in 3A hospital was half an hour. The bad condition brings patients miserable experience and risk to give wrong diagnose. </p><p>The youngs in China is becoming unwilling to go to hospital and wait in long queue if they feel not that bad. To deal with sight illness or their occupational disease, they buy themselves pills by parents' experience or searching on the Internet. But both way are not safe. Cold with similar symptom can be the wind-cold, wind-heat or rheumatism-cold type which mess people deeply. With increasing mobile medical market and new technology, there should be a better way to improve the experience and accuracy in self-diagnostics. </p>
+						<p>China's hospital medical resourse is scarce to afford billions people's daily health care. According to the research in 2014, the number of doctors per 10000 citizen was only 21 and the average waiting time in 3A hospital was half an hour. The bad
+							condition brings patients miserable experience and risk to give wrong diagnose. </p>
+						<p>The youngs in China is becoming unwilling to go to hospital and wait in long queue if they feel not that bad. To deal with sight illness or their occupational disease, they buy themselves pills by parents' experience or searching on the Internet.
+							But both way are not safe. Cold with similar symptom can be the wind-cold, wind-heat or rheumatism-cold type which mess people deeply. With increasing mobile medical market and new technology, there should be a better way to improve the experience
+							and accuracy in self-diagnostics. </p>
 					</div>
 				</div>
 				<hr>
@@ -94,12 +103,12 @@
 				<h3>before we started, we need to analysis <br>the pest + market resources to make sure <br>if there's a possible market</h3>
 				<div class="row">
 					<div class="8u$ -4u 12u$(medium)">
-							<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
-							<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
-							<p><sup>*1 There is no specific law in mobile medical care in China. I use standards by FDA in the U.S. to classify apps in China.</sup></p>
-							<p><sup>*2 With traditional Chinese diagnostics, patients are more focus on their symptom instead of body index data. But most patients are likely to use western medicine.</sup></p>
-							</div>
-						</div>
+						<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
+						<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
+						<p><sup>*1 There is no specific law in mobile medical care in China. I use standards by FDA in the U.S. to classify apps in China.</sup></p>
+						<p><sup>*2 With traditional Chinese diagnostics, patients are more focus on their symptom instead of body index data. But most patients are likely to use western medicine.</sup></p>
+					</div>
+				</div>
 
 				<hr>
 				<h3>then we started to dig in <br>who can we serve and,<br>what can Smartpill do in capability </h3>
@@ -110,12 +119,12 @@
 			</section>
 
 			<!-- business model -->
-			<section id="model" style="background-color: #111;" class="main">
+			<section id="model" class="main black-bg">
 				<h2>_business model innovation</h2>
-				<h3 style="color:#ccc;">we spent a semester on business analysis <br>to make a more complete model <br>with possible resources </h3>
+				<h3 class="grey">we spent a semester on business analysis <br>to make a more complete model <br>with possible resources </h3>
 				<span class="image alt"><img src="images/smartpill_model.png" alt="" /></span>
 				<hr>
-				<h3 style="color:#ccc;">as shown, we expand the partners to <br>medical companies and pharmacist union to <br>provide stable service and <br>collect more information in diagnostics database</h3>
+				<h3 class="grey">as shown, we expand the partners to <br>medical companies and pharmacist union to <br>provide stable service and <br>collect more information in diagnostics database</h3>
 			</section>
 
 			<!-- strategy -->
@@ -143,7 +152,10 @@
 		<!-- Footer -->
 
 		<footer id="footer">
-			<p><a href="../index.html">< back to home</a></p>
+			<p>
+				<a href="../index.html">
+					< back to home</a>
+			</p>
 			<p class="right"> <a href="../mobile/">next project: Inforest ></a> </p>
 
 			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
