= fix border in mobile view

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -116,7 +116,7 @@
 
 							<div class="6u 12u$(medium)">
 								<div class="image fit">
-									<video autoplay loop class="video-mockup1"><source src="images/1.mov" type="video/mp4"></video>
+									<video autoplay loop class="video-mockup1" onclick="this.play()"><source src="images/1.mov" type="video/mp4"></video>
 									<img src="images/mobile_device.png" alt="" />
 								</div>
 								<h4>today -<br>
