= fix mobile view margin

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -127,7 +127,7 @@
 							<div class="6u 12u$(medium)">
 								<h4><br><br></h4>
 								<div class="image fit">
-									<video autoplay loop class="video-mockup1"><source src="images/2.mov" type="video/mp4"></video>
+									<video autoplay loop class="video-mockup1" onclick="this.play()"><source src="images/2.mov" type="video/mp4"></video>
 									<img src="images/mobile_device.png" alt="" />
 								</div>
 								<h4>calendar - <br>make the most of your time</h4>
@@ -138,7 +138,7 @@
 
 							<div class="6u 12u$(medium)">
 								<div class="image fit">
-									<video autoplay loop class="video-mockup1"><source src="images/3.mov" type="video/mp4"></video>
+									<video autoplay loop class="video-mockup1" onclick="this.play()"><source src="images/3.mov" type="video/mp4"></video>
 									<img src="images/mobile_device.png" alt="" />
 								</div>
 								<h4>discover - <br> fill your calendar with joy</h4>
@@ -148,7 +148,7 @@
 							<div class="6u 12u$(medium)">
 								<h4><br><br></h4>
 								<div class="image fit">
-									<video autoplay loop class="video-mockup1"><source src="images/4.mov" type="video/mp4"></video>
+									<video autoplay loop class="video-mockup1" onclick="this.play()"><source src="images/4.mov" type="video/mp4"></video>
 									<img src="images/mobile_device.png" alt="" />
 								</div>
 								<h4>tools - <br>useful helps</h4>
@@ -283,7 +283,7 @@
 
 							<div class="6u 12u$(medium)">
 								<div class="image fit">
-									<video autoplay loop class="video-mockup1"><source src="images/5.mov" type="video/mp4"></video>
+									<video autoplay loop class="video-mockup1" onclick="this.play()"><source src="images/5.mov" type="video/mp4"></video>
 									<img src="images/mobile_device.png" alt="" />
 								</div>
 								<h4>add an assignment <br>when the class is finished</h4>
@@ -293,7 +293,7 @@
 							<div class="6u 12u$(medium)">
 								<h4><br><br></h4>
 								<div class="image fit">
-									<video autoplay loop class="video-mockup1"><source src="images/6.mov" type="video/mp4"></video>
+									<video autoplay loop class="video-mockup1" onclick="this.play()"><source src="images/6.mov" type="video/mp4"></video>
 									<img src="images/mobile_device.png" alt="" />
 								</div>
 								<h4>find activities on <br>the cool poster wall</h4>
@@ -302,7 +302,7 @@
 
 							<div class="6u 12u$(medium)">
 								<div class="image fit">
-									<video autoplay loop class="video-mockup1"><source src="images/7.mov" type="video/mp4"></video>
+									<video autoplay loop class="video-mockup1" onclick="this.play()"><source src="images/7.mov" type="video/mp4"></video>
 									<img src="images/mobile_device.png" alt="" />
 								</div>
 								<h4>add an activity <br>into your calendar </h4>
@@ -312,7 +312,7 @@
 							<div class="6u 12u$(medium)">
 								<h4><br><br></h4>
 								<div class="image fit">
-									<video autoplay loop class="video-mockup1"><source src="images/8.mov" type="video/mp4"></video>
+									<video autoplay loop class="video-mockup1" onclick="this.play()"><source src="images/8.mov" type="video/mp4"></video>
 									<img src="images/mobile_device.png" alt="" />
 								</div>
 								<h4>search and add <br>school bus schedule</h4>
