--- a/ICE1/zhen.html
+++ b/ICE1/zhen.html
@@ -36,6 +36,7 @@
   <section style="background-color: #eee; margin: 10px;">
     <h2>Contact</h2>
     <img src="img/map.png" alt="map" height="300">
+    <iframe src="http://alej.wang/#about" width="600px" height="600px"></iframe>
     <div id="contact">
       <form>
         <label for="name">Name:</label>
