--- a/ICE1/zhen.html
+++ b/ICE1/zhen.html
@@ -44,15 +44,15 @@
         <label for="dob">DOB:</label>
         <input type="date" name="DOB" id = "dob"><br>
 
-        <label for="snack">Please enter your choice of snack:<br>
-        <input type="radio" name="snack" value="pizza"> Pizza<br>
-        <input type="radio" name="snack" value="donut"> Donut<br>
-        <input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
+        Please enter your choice of snack:<br>
+        <input type="radio" name="snack" id="snack1" value="pizza"> <label for="snack1"> Pizza</label><br>
+        <input type="radio" name="snack" id="snack2" value="donut"> <label for="snack2"> Donut</label><br>
+        <input type="radio" name="snack" id="snack3" value="vegan"> <label for="snack3"> Vegan Stuff</label><br>
 
-        <label for="drink">Please enter your choice of drink:<br>
-        <input type="radio" name="drink" value="coffee"> Coffee<br>
-        <input type="radio" name="drink" value="tea"> Tea<br>
-        <input type="radio" name="drink" value="water"> Water<br>
+        Please enter your choice of drink:<br>
+        <input type="radio" name="drink" id="drink1" value="coffee"><label for="drink1"> Coffee</label><br>
+        <input type="radio" name="drink" id="drink2" value="tea"><label for="drink2"> Tea</label><br>
+        <input type="radio" name="drink" id="drink3" value="water"><label for="drink3"> Water</label><br>
       </form>
     </div>
   </section>
