SI539 tons of homework update

--- a/civicrm/index.html
+++ b/civicrm/index.html
@@ -40,7 +40,8 @@
 		<header id="header" class="civicrm alt">
 			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 			<h1>Consulting For Netural Zone</h1>
-			<p>CiviCRM NZ customized version - contextual inquiry for client's need to <br> reshape experiences of tracking teen members and programs</p>
+			<p>CiviCRM NZ customized version - contextual inquiry for client's need to <br>
+				 reshape experiences of tracking teen members and programs </p>
 		</header>
 		<section id="header-img" class="civicrm main">
 			<span class="image main"><img src="images/civicrm_header.png" alt="" /></span>
@@ -84,10 +85,10 @@
 				<h3>NZ provides fun programs for local teens <br>using customized CiviCRM system </h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
+						<p>CiviCRM is an open source, web-based management database specifically for nonprofit organizations. </p>
 						<p>Since it's customized by Netural Zone, we call it CiviCRM <sup>nz</sup>. </p>
-						<p>The youngs in China is becoming unwilling to go to hospital and wait in long queue if they feel not that bad. To deal with sight illness or their occupational disease, they buy themselves pills by parents' experience or searching on the Internet.
-							But both way are not safe. Cold with similar symptom can be the wind-cold, wind-heat or rheumatism-cold type which mess people deeply. With increasing mobile medical market and new technology, there should be a better way to improve the experience
-							and accuracy in self-diagnostics. </p>
+						<p>Our client want to improve the use of CiviCRM to gather and manage information about teens and improve outreach and engagement with parents.</p>
+
 					</div>
 				</div>
 				<hr>
