--- a/ICE1/ICE-jQuery-Starter/challenge2.html
+++ b/ICE1/ICE-jQuery-Starter/challenge2.html
@@ -4,10 +4,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Challenge Two</title>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
-      // YOUR CODE HERE
+      $(document).ready(function() {
+				$('#useBilling').on("change", function(){
+					if (this.checked) {
+						$("[name='homeAdd']").val($("[name='billingAdd']").val());
+						$("[name='homeAdd']").prop('disabled', true);
+					} else {
+						$("[name='homeAdd']").val("");
+						$("[name='homeAdd']").prop('disabled', false);
+					}
+				});
+			});
+
     </script>
 </head>
 <body>
