--- a/index.html
+++ b/index.html
@@ -24,121 +24,246 @@
 <body>
   <div class="container-fluid">
     <div class="row">
+      <!-- background -->
+      <div class="background">
+      </div>
 
       <!-- self intro -->
-      <div class="col-sm-12 col-md-4">
-        <div class="left-container text-left" id="landing">
-          <h1>_alejandro</h1>
-          <p>From real life,<br> To be what's next.<br><br> Hi, my name is Zhen Wang<br> Master student in HCI @ UMich<br> Love both design and coding <br> Looking for internship in 2018 <br>
-            <a href="#about"> ...</a> <br><br>
-            <a href="./downloads/Zhen_Wang_resume117.pdf" target="_blank">Download my resume!</a>
-          </p>
+      <div class="col-sm-12 col-md-6">
+        <div id="landing">
+          <h1>
+            _
+            <span class="word-covered">alejandro.wang</span>
+          </h1>
 
-          <div class="ver_down">
+          <!-- decoration only-->
+          <div id="decoration_down">
             <h1><span>__</span></h1>
           </div>
-          <!-- decoration only-->
 
         </div>
       </div>
 
-      <div class="col-sm-12 col-md-8 text-right" id="works">
-        <h1 class="hor_right"><span>|</span></h1>
-        <!-- decoration only-->
+      <div class="col-sm-12 col-md-6">
 
-        <!-- work cards -->
-        <a href="./mobile/">
-          <div class="work-card" id="work-mobile">
-            <div class="ver_center">
-              <h2>QSC Mobile </h2>
-              <h3>Everyday calendar app with new lifestyle designed for university students. Launched in App Store.  <span>10/ 2016.</span></h3>
-            </div>
+        <!-- self intro -->
+        <div class="row">
+          <div class="col-sm-12 col-md-5" id="self-intro">
+            <!-- <h1 class="hor_right text-right"><span>|</span></h1> -->
+            <!-- decoration only-->
+
+            <p>Master student in HCI @ UMich <br> Love both design and coding <br> Looking for an internship this summer <br>
+              <a href="#footer-p" onclick="showAboutInfo()">...... about me</a> <br></p>
           </div>
-        </a>
 
-        <!-- <a href="./inneref/">
-              <div class="work-card" id="work-inneref">
-                <div class="ver_center">
-                  <h2>Inneref </h2>
-                  <h3>Engagement app for new employees<br>research and design in CHI  1/ 2018.</h3>
+          <div id="worklist">
+
+            <div class="card">
+              <div class="card-header" id="mobile-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info">Qiushichao Mobile</h2>
+              </div>
+              <div id="mobile-info" class="collapse" aria-labelledby="mobile-title" data-parent="#worklist" alt="./images/mobile-banner.png">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>Everyday calendar app designed for university students <br> to organize their academic calendar and find more club activities in leisure life <br> launched in 2016</p>
+                  <h3>_duration</h3>
+                  <p>11/ 2015 - 10/ 2016 </p>
+                  <h3>_client</h3>
+                  <p>Qiushichao Team, Zhejiang University</p>
+                  <h3>_scope</h3>
+                  <p>User Research, Mobile App Interaction Design</p>
+                  <a class="word-colored-orange" href="./mobile/">Read more</a>
                 </div>
               </div>
-            </a> -->
+            </div>
 
-        <!-- <a href="./civicrm/">
-              <div class="work-card" id="work-inforest">
-                <div class="ver_center">
-                  <h2>CiviCRM</h2>
-                  <h3>Consulting with Neutral Zone and <br> reshaping experiences of tracking members <br>and programs in CiviCRM system 12/ 2017.</h3>
+            <!-- <div class="card">
+              <div class="card-header" id="inneref-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
+              </div>
+              <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#worklist">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>engagement app for new employees in CHI competition<br> designed for enterprise</p>
+                  <h3>_duration</h3>
+                  <p>10/ 2017 - 1/ 2018 </p>
+                  <h3>_contest</h3>
+                  <p>CHI, university of Michigan</p>
+                  <h3>_scope</h3>
+                  <p>User Research, Mobile App Interaction Design</p>
+                  <a class="word-colored-orange" href="./mobile/">Read more</a>
                 </div>
               </div>
-            </a> -->
+            </div> -->
 
-        <a href="./smartpill/">
-          <div class="work-card" id="work-smartpill">
-            <div class="ver_center">
-              <h2>SmartPill </h2>
-              <h3>Pocket pharmacist app strategy design and martketing plan for busy patients and chronic disease patients.  <span>6/ 2015.</span></h3>
+            <!-- <div class="card">
+              <div class="card-header" id="civicrm-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
+              </div>
+              <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#worklist">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>Consulting with Neutral Zone and reshaping experiences of tracking members and programs in CiviCRM system</p>
+                  <h3>_duration</h3>
+                  <p>9/ 2017 - 12/ 2017 </p>
+                  <h3>_course</h3>
+                  <p>SI501, University of Michigan</p>
+                  <h3>_scope</h3>
+                  <p>User dingxing Research, Mobile App Interaction Design</p>
+                  <a class="word-colored-orange" href="./mobile/">Read more</a>
+                </div>
+              </div>
+            </div> -->
+
+            <div class="card">
+              <div class="card-header" id="smartpill-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info">SmartPill</h2>
+              </div>
+              <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#worklist" alt="./images/smartpill-banner.png">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>Pocket pharmacist app strategy design with martketing plan <br>for busy patients and chronic disease patients</p>
+                  <h3>_duration</h3>
+                  <p>3/ 2015 - 6/ 2015 </p>
+                  <h3>_course</h3>
+                  <p>Chinese Business Culture and Entrepreneurship, Zhejiang University</p>
+                  <h3>_scope</h3>
+                  <p>Market Research, Business Process Design, Strategy, UI Design</p>
+                  <a class="word-colored-orange" href="./mobile/">Read more</a>
+                </div>
+              </div>
             </div>
-          </div>
-        </a>
 
-        <a href="./inforest/">
-          <div class="work-card" id="work-inforest">
-            <div class="ver_center">
-              <h2>InForest </h2>
-              <h3>Interactive artifact and space design<br>to invoke dreams of forest in heavy city mist. <span>11/ 2016.</span></h3>
+            <div class="card">
+              <div class="card-header" id="inforest-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#inforest-info" aria-expanded="false" aria-controls="inforest-info">InForest Space</h2>
+              </div>
+              <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#worklist" alt="./images/inforest-banner.png">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>Interactive artifact and space design<br>to invoke dreams of forest in heavy city mist</p>
+                  <h3>_duration</h3>
+                  <p>5/ 2016 - 11/ 2016 </p>
+                  <h3>_program</h3>
+                  <p>Student Research Training Program, Zhejiang University</p>
+                  <h3>_scope</h3>
+                  <p>Technology Research, Interaction Design, Architecture Design</p>
+                  <a class="word-colored-orange" href="./inforest/">Read more</a>
+                </div>
+              </div>
             </div>
+
+            <div class="card">
+              <div class="card-header" id="animal-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#animal-info" aria-expanded="false" aria-controls="animal-info">The Edge : Animal Shelter Design</h2>
+              </div>
+              <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#worklist" alt="./images/edge-banner.png">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>Start with a view of animals <br>make an shelter for us animals <br>all the way from fund to adoption </p>
+                  <h3>_duration</h3>
+                  <p>9/ 2015 - 11/ 2015 </p>
+                  <h3>_course</h3>
+                  <p>Architecture Design, Zhejiang University</p>
+                  <h3>_scope</h3>
+                  <p>'Product' Research, Architecture Design</p>
+                  <a class="word-colored-orange" href="./animal/">Read more</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header" id="about-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#about-info" aria-expanded="false" aria-controls="about-info">Alejandro Wang</h2>
+              </div>
+              <div id="about-info" class="collapse" aria-labelledby="about-title" data-parent="#worklist" alt="./images/about-banner.png">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>A synthesized project I've been working on for 24 years... all right you catch ME! <br>
+                  Hey, my name is Zhen Wang. My friends call me Alejandro. </p>
+                  <h3>_duration</h3>
+                  <p>5/ 1994 - now </p>
+                  <h3>_before</h3>
+                  <p>I was a <strong>coder</strong> at the beginning. I was an exploring <strong>architect</strong>. I like combination beauty between technology and design. Because once they being together, the mixing
+                    magic can make life easier and joyful. That’s why I am now learning <strong>Human-Computer Interaction at University of Michigan</strong>.<br> I started a <strong>start-up</strong> focus on online education in China. The vision of my company Zhimou Tech Inc (the name means intelligence) was to help new coding learners to get on the right track and share
+                    ideas with the others by new technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management. I always want to expand myself with more skills and knowledge.
+                    But my focus is still design - the only thing I urge to dig in forever.</p>
+<h3>_now</h3>
+                    <p> I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype and coding</strong> and more at school.
+                    By some small projects, I realize my efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. <strong>To be what’s next</strong>,
+                    is a hard thing to say. Even though I realize changing the status quo sometimes hurts, and the ideas won’t come true immediately, to design for a better future never goes wrong.</p>
+<h3>_next</h3>
+                    <p><strong>Looking for an internship!</strong> Design for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to
+                    achieve. I'm graduating in <strong>April 2019</strong> and looking for open and fun people to work with in summer 2018!</p>
+                    <a class="word-colored-orange" href="mailto:alejwang@umich.edu?subject=Hello">Say HI!</a>
+                </div>
+              </div>
+            </div>
+
+
           </div>
-        </a>
 
-        <div id="about">
-          <h2>Alejandro </h2>
-          <h3>A synthesized project I've been working on for 24 years.<br>... all right you catch ME! </h3>
-          <p>
-            <br> -
-            <br> Hey, my name is Zhen Wang. My friends call me Alejandro.<br><br>
 
-            <strong>Once upon a time</strong>  <br>
-            I was a <strong>coder</strong> at the beginning. I was an exploring <strong>architect</strong>. I like combination beauty between technology and design. Because once they being together,
-            the mixing magic can make life easier and joyful. That’s why I am now learning <strong>Human-Computer Interaction at University of Michigan, Ann Arbor</strong>.<br>
-            I started a <strong>start-up</strong> focus on online education before in China. When I was young, I got help from useful but unusable online tools for learning to code. So the vision of my company Zhimou Tech Inc (the name means intelligence) was to help new coding learners to get on the right track and share ideas with the others by new technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management. I always want to expand myself with more skills and knowledge. But my focus is still design - the only thing I urge to dig in forever.<br><br>
-
-            <strong>For now</strong>  <br>
-            I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype coding</strong> and more at school. By some small
-            projects, I realize my efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. <strong>To be what’s next</strong>, is a hard thing to say. Even though I realize changing the status quo sometimes hurts, and the ideas won’t come true immediately, to design for a better future never goes wrong.<br><br>
-
-            <strong>Looking for an internship!</strong> <br>
-            Design for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to achieve. I'm graduating in <strong>April 2019</strong> and looking for open and fun people
-            to work with in summer 2018!
-            <a href="mailto:alejwang@umich.edu?subject=Hello">SAY HI!</a></p>
-          <!-- <div class="sociallinks">
-                  <ul>
-                    <li><a href="https://xinyuuuuuu.tumblr.com/" target="_blank"><img src="./images/instagram.png"></a></li>
-                    <li><a href="https://dribbble.com/xinyuli" target="_blank"><img src="./images/dribbble.png"></a></li>
-                    <li><a href="https://medium.com/@xinyul" target="_blank"><img src="./images/medium.png"></a></li>
-                    <li><a href="https://www.linkedin.com/in/xinyuuu" target="_blank"><img src="./images/linkedin.png"></a></li>
-                    <li><a href="mailto:lixinyu513@gmail.com?subject=Hello" target="_blank"><img src="./images/email.png"></a></li>
-                  </ul>
-                </div> -->
+          <div id="footer-p">
+            <p>© Alejandro</p>
+          </div>
 
         </div>
+        <!-- right -->
 
-        <div id="footer-p">
-          <p>© Alejandro</p>
-        </div>
+
 
       </div>
-      <!-- right -->
-
-
-
     </div>
-  </div>
-  <div id="preloader">
-    <div id="loader"></div>
-  </div>
+    <div id="preloader">
+      <div id="loader"></div>
+    </div>
 
+    <script type="text/javascript">
+      $(document).ready( function() {
+        setTimeout(function(){
+          $(".background").fadeIn(000);
+        }, 1000)
+      });
+
+      function preload(arrayOfImages) {
+          $(arrayOfImages).each(function(){
+              $('<img/>')[0].src = this;
+              // Alternatively you could use:
+              // (new Image()).src = this;
+          });
+      }
+
+      preload([
+          "./images/mobile-banner.png",
+          "./images/smartpill-banner.png",
+          "./images/inforest-banner.png",
+          "./images/edge-banner.png",
+          "./images/about-banner.png"
+      ]);
+
+      function showAboutInfo() {
+        $('#about-info').collapse('show');
+      }
+
+      $('.collapse').on('hide.bs.collapse', function () {
+        var styles = {
+          backgroundImage: 'url("./images/blank-banner.png")'
+        }
+        $(".background").css(styles);
+        $("#" + $(this).attr('aria-labelledby') + " > h2").removeClass('word-highlighted');
+
+      })
+      $('.collapse').on('shown.bs.collapse', function () {
+        var styles = {
+          backgroundImage: 'url(' + $(this).attr('alt') + ')'
+        }
+        $(".background").css(styles);
+        $("#" + $(this).attr('aria-labelledby') + " > h2").addClass('word-highlighted');
+      })
+
+
+    </script>
 </body>
 
 </html>
