New project EDGE updated. Fix the jQuery event on iOS.
The bootstap collapes is not working in the previous version. Use cursor: point to quickly solve it.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="./assets/css/preloader.css">
   <link rel="stylesheet" href="./assets/css/normalize.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/font.css">
   <link rel="stylesheet" href="./assets/css/main.css">
   <script src="./assets/js/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="./assets/js/plugins.js"></script>
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/works.js"></script>
@@ -60,7 +60,7 @@
 
             <div class="card">
               <div class="card-header" id="mobile-title">
-                <h2 class="mb-0" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info">Qiushichao Mobile</h2>
+                <h2 class="mb-0" href="#mobile-info" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info">Qiushichao Mobile</h2>
               </div>
               <div id="mobile-info" class="collapse" aria-labelledby="mobile-title" data-parent="#worklist" alt="./images/mobile-banner.png">
                 <div class="card-body">
@@ -96,24 +96,6 @@
               </div>
             </div> -->
 
-            <!-- <div class="card">
-              <div class="card-header" id="civicrm-title">
-                <h2 class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
-              </div>
-              <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#worklist">
-                <div class="card-body">
-                  <h3>_intro</h3>
-                  <p>Consulting with Neutral Zone and reshaping experiences of tracking members and programs in CiviCRM system</p>
-                  <h3>_duration</h3>
-                  <p>9/ 2017 - 12/ 2017 </p>
-                  <h3>_course</h3>
-                  <p>SI501, University of Michigan</p>
-                  <h3>_scope</h3>
-                  <p>User dingxing Research, Mobile App Interaction Design</p>
-                  <a class="word-colored-orange" href="./mobile/">Read more</a>
-                </div>
-              </div>
-            </div> -->
 
             <div class="card">
               <div class="card-header" id="smartpill-title">
@@ -173,29 +155,47 @@
             </div>
 
             <div class="card">
+              <div class="card-header" id="civicrm-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
+              </div>
+              <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#worklist">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>Consulting with Neutral Zone and reshaping experiences of tracking members and programs in CiviCRM system</p>
+                  <h3>_duration</h3>
+                  <p>9/ 2017 - 12/ 2017 </p>
+                  <h3>_course</h3>
+                  <p>SI501, University of Michigan</p>
+                  <h3>_scope</h3>
+                  <p>User Research, Consulting</p>
+                  <a class="upcoming" href="#">Upcoming soon...</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
               <div class="card-header" id="about-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#about-info" aria-expanded="false" aria-controls="about-info">Alejandro Wang</h2>
               </div>
               <div id="about-info" class="collapse" aria-labelledby="about-title" data-parent="#worklist" alt="./images/about-banner.png">
                 <div class="card-body">
                   <h3>_intro</h3>
-                  <p>A synthesized project I've been working on for 24 years... all right you catch ME! <br>
-                  Hey, my name is Zhen Wang. My friends call me Alejandro. </p>
+                  <p>A synthesized project I've been working on for 24 years... all right you catch ME! <br> Hey, my name is Zhen Wang. My friends call me Alejandro. </p>
                   <h3>_duration</h3>
                   <p>5/ 1994 - now </p>
                   <h3>_before</h3>
-                  <p>I was a <strong>coder</strong> at the beginning. I was an exploring <strong>architect</strong>. I like combination beauty between technology and design. Because once they being together, the mixing
-                    magic can make life easier and joyful. That’s why I am now learning <strong>Human-Computer Interaction at University of Michigan</strong>.<br> I started a <strong>start-up</strong> focus on online education in China. The vision of my company Zhimou Tech Inc (the name means intelligence) was to help new coding learners to get on the right track and share
-                    ideas with the others by new technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management. I always want to expand myself with more skills and knowledge.
-                    But my focus is still design - the only thing I urge to dig in forever.</p>
-<h3>_now</h3>
-                    <p> I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype and coding</strong> and more at school.
-                    By some small projects, I realize my efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. <strong>To be what’s next</strong>,
-                    is a hard thing to say. Even though I realize changing the status quo sometimes hurts, and the ideas won’t come true immediately, to design for a better future never goes wrong.</p>
-<h3>_next</h3>
-                    <p><strong>Looking for an internship!</strong> Design for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to
-                    achieve. I'm graduating in <strong>April 2019</strong> and looking for open and fun people to work with in summer 2018!</p>
-                    <a class="word-colored-orange" href="mailto:alejwang@umich.edu?subject=Hello">Say HI!</a>
+                  <p>I was a <strong>coder</strong> at the beginning. I was an exploring <strong>architect</strong>. I like combination beauty between technology and design. Because once they being together, the mixing magic can make life easier and joyful.
+                    That’s why I am now learning <strong>Human-Computer Interaction at University of Michigan</strong>.<br> I started a <strong>start-up</strong> focus on online education in China. The vision of my company Zhimou Tech Inc (the name means
+                    intelligence) was to help new coding learners to get on the right track and share ideas with the others by new technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising,
+                    and management. I always want to expand myself with more skills and knowledge. But my focus is still design - the only thing I urge to dig in forever.</p>
+                  <h3>_now</h3>
+                  <p> I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype and coding</strong> and more at school. By some small projects, I
+                    realize my efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. <strong>To be what’s next</strong>, is a hard
+                    thing to say. Even though I realize changing the status quo sometimes hurts, and the ideas won’t come true immediately, to design for a better future never goes wrong.</p>
+                  <h3>_next</h3>
+                  <p><strong>Looking for an internship!</strong> Design for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to achieve.
+                    I'm graduating in <strong>April 2019</strong> and looking for open and fun people to work with in summer 2018!</p>
+                  <a class="word-colored-orange" href="mailto:alejwang@umich.edu?subject=Hello">Say HI!</a>
                 </div>
               </div>
             </div>
@@ -220,33 +220,33 @@
     </div>
 
     <script type="text/javascript">
-      $(document).ready( function() {
-        setTimeout(function(){
+      $(document).ready(function() {
+        setTimeout(function() {
           $(".background").fadeIn(000);
         }, 1000)
       });
 
       function preload(arrayOfImages) {
-          $(arrayOfImages).each(function(){
-              $('<img/>')[0].src = this;
-              // Alternatively you could use:
-              // (new Image()).src = this;
-          });
+        $(arrayOfImages).each(function() {
+          $('<img/>')[0].src = this;
+          // Alternatively you could use:
+          // (new Image()).src = this;
+        });
       }
 
       preload([
-          "./images/mobile-banner.png",
-          "./images/smartpill-banner.png",
-          "./images/inforest-banner.png",
-          "./images/edge-banner.png",
-          "./images/about-banner.png"
+        "./images/mobile-banner.png",
+        "./images/smartpill-banner.png",
+        "./images/inforest-banner.png",
+        "./images/edge-banner.png",
+        "./images/about-banner.png"
       ]);
 
       function showAboutInfo() {
         $('#about-info').collapse('show');
       }
 
-      $('.collapse').on('hide.bs.collapse', function () {
+      $('.collapse').on('hide.bs.collapse', function() {
         var styles = {
           backgroundImage: 'url("./images/blank-banner.png")'
         }
@@ -254,15 +254,13 @@
         $("#" + $(this).attr('aria-labelledby') + " > h2").removeClass('word-highlighted');
 
       })
-      $('.collapse').on('shown.bs.collapse', function () {
+      $('.collapse').on('shown.bs.collapse', function() {
         var styles = {
           backgroundImage: 'url(' + $(this).attr('alt') + ')'
         }
         $(".background").css(styles);
         $("#" + $(this).attr('aria-labelledby') + " > h2").addClass('word-highlighted');
       })
-
-
     </script>
 </body>
 
