--- a/edge/index.html
+++ b/edge/index.html
@@ -50,9 +50,9 @@
 		<nav id="nav" class="edge">
 			<ul>
 				<li><a href="#intro" class="active">intro</a></li>
-				<li><a href="#program">program</a></li>
+				<li><a href="#analysis">analysis</a></li>
 				<li><a href="#plan">plan</a></li>
-				<li><a href="#rethink">rethink</a></li>
+				<li><a href="#render">render</a></li>
 			</ul>
 		</nav>
 
@@ -63,14 +63,15 @@
 
 				<div class="row">
 					<div class="6u 12u$(medium)">
-						<p><strong>_role</strong> As the team leader, I and my teammates conducted 'product' research in the animal saving methods, and make a unique plan and design from the track of animals. I was in charge of the plan developing and also the technical engineering design.
+						<p><strong>_role</strong> As the team leader, I and my teammates conducted 'product' research in the animal saving methods, and make a unique plan and design from the track of animals. I was in charge of the plan developing and also the technical engineering
+							design.
 						</p>
 					</div>
 					<div class="6u$ 12u$(medium)">
 						<ul class="alt">
 							<li><strong>_duration</strong> 9/ 2015 - 11/ 2015.</li>
 							<li><strong>_course</strong> Architecture Design, Zhejiang University</li>
-							<li><strong>_partners</strong> Maggie Long, Yan Li, Siwei Su</li>
+							<li><strong>_partners</strong> Maggie Long, Yan Li, Siwei Su, Tao Lin (Tutor)</li>
 							<li><strong>_scope</strong> 'Product' Research, Architecture Design</li>
 						</ul>
 					</div>
@@ -80,65 +81,94 @@
 			<!-- Intro -->
 			<section id="intro" class="main">
 				<h2>_introducing</h2>
-				<h3>China's hospital medical resourse is scarce <br>and the young generation usually don't go to hospital, <br>that's why pharmacist became important</h3>
+				<h3>the purpose is not only to <br>build a shelter for animals to live <br>but also to facilitate adoption <br>by dialogue with the urban areas</h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
-						<p>Located on the bank of Qian Tang river in Hangzhou, which is away from the downtown area, the site can be defined as an ‘’Isolated island “. Based on the existed low-grade adoption, the location is undeniable add difficulty to the operation of animal shelter. Therefore, the purpose of design is to facilitate adoption by creating efficient dialogue with the urban area by building systematic relationship with the outside public.  </p>
-					
+						<p>Located on the bank of Qian Tang river in Hangzhou, which is away from the downtown area, the site can be defined as an ‘’Isolated island “. Based on the existed low-grade adoption, the location is undeniable add difficulty to the operation of animal
+							shelter. Therefore, the purpose of design is to facilitate adoption by creating efficient dialogue with the urban area by building systematic relationship with the outside public. </p>
 					</div>
 				</div>
+				<span class="image alt"><img src="images/edge-environment.png" alt="Map of the environment" /></span>
 				<hr>
-				<h3>so we came up with the idea for patents <br>to create or get possible medical resourse <br>on their phone with Smartpill</h3>
-				<p><a href="#model">skip to see the model ></a></p>
+				<h3>so we decide to design this building <br>as we do on a product or a service </h3>
+
+				<p><a href="#render">skip to see the showcase ></a></p>
 			</section>
 
 			<!-- Analysis -->
 			<section id="analysis" class="main">
-				<h2>_market analysis</h2>
-				<h3>before we started, we need to analysis <br>the pest + market resources to make sure <br>if there's a possible market</h3>
-				<div class="row">
-					<div class="8u$ -4u 12u$(medium)">
-						<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
-						<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
-						<p><sup>*1 There is no specific law in mobile medical care in China. I use standards by FDA in the U.S. to classify apps in China.</sup></p>
-						<p><sup>*2 With traditional Chinese diagnostics, patients are more focus on their symptom instead of body index data. But most patients are likely to use western medicine.</sup></p>
-					</div>
-				</div>
-
-				<hr>
-				<h3>then we started to dig in <br>who can we serve and,<br>what can Smartpill do in capability </h3>
-				<span class="image alt"><img src="images/smartpill_target.png" alt="" /></span>
-				<hr>
-				<h3>in a word, <br>SmartPill offers self-diagnostics <br>and drug use inquiry services <br>for the young and mid-aged patients <br>with slight or chronic disease</h3>
-
-			</section>
-
-			<!-- business model -->
-			<section id="model" class="main black-bg">
-				<h2>_business model innovation</h2>
-				<h3 class="grey">we spent a semester on business analysis <br>to make a more complete model <br>with possible resources </h3>
-				<span class="image alt"><img src="images/smartpill_model.png" alt="" /></span>
-				<hr>
-				<h3 class="grey">as shown, we expand the partners to <br>medical companies and pharmacist union to <br>provide stable service and <br>collect more information in diagnostics database</h3>
-			</section>
-
-			<!-- strategy -->
-			<section id="strategy" class="main">
-				<h2>_strategy</h2>
-				<h3>by market research and survey, <br>we designed a marketing strategy in 4P frame <br>to make sure our target users are accurate</h3>
-				<span class="image alt"><img src="images/smartpill_strategy.png" alt="" /></span>
-			</section>
-
-			<!-- wireframe -->
-			<section id="wireframe" class="main">
-				<h2>_wireframe</h2>
-				<h3>to make it easy to understand, <br>we made a simple wireframe </h3>
+				<h2>_systematic analysis</h2>
+				<h3>first, use site analysis and program diagram <br> to understand the need of animal in spaces</h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
-						<span class="image alt"><img src="images/smartpill_wf0.png" alt="" /></span>
-						<span class="image alt"><img src="images/smartpill_wf1.png" alt="" /></span>
+						<span class="image fit"><img src="images/edge-site.png" alt="" /></span>
+						<h4>city boundry</h4>
+						<p>Harmonious society is not only the harmony between people but also about man and animals. Animals, just like humans, crave happiness and fear for death. With the acceleration of urbanization, the number of pets is increasing, and the number of stray
+							animals is increasing at the same time. More and more stray animals have brought about a series of social, environmental and health problems. At present, only a part of the economically developed areas in China have government-set-up shelters.
+							However, these institutions are often encountered operating crisis due to the low occupancy rate, difficulty on funds, lack of social concerns and other problems.Since the site is located on the edge of the city, away from the city center, there
+							is no doubt that it increases the difficulty on the operation of the shelter.</p>
 					</div>
 				</div>
+
+				<div class="row">
+					<div class="9u$ -3u 12u$(medium)">
+						<span class="image fit"><img src="images/edge-program.png" alt="" /></span>
+						<h4>program diagram</h4>
+						<div class="row">
+							<div class="6u  12u$(medium)">
+								<p>It reveals that most of the three streamline is organized linearly with a substantial intersection between each other, according to the analysis of the flow line. Thus, it is possible to create different kinds of space ,producing a variety of
+									node effect ，and obtain the most convenient streamline organization mode by researching the form of the intersection of the three linear streamlines by means of typology.</p>
+							</div>
+							<div class="6u$ 12u$(medium)">
+								<span class="image fit"><img src="images/edge-shape.png" alt="" /></span>
+								<h4>inside realization</h4>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<hr>
+				<h3>shape done <br>then since we can't talk to animals directly <br> we try to figure out what they need from where</h3>
+				<span class="image alt"><img src="images/edge-flow.png" alt="" /></span>
+				<div class="row">
+					<div class="9u$ -3u 12u$(medium)">
+						<h4>outside eco-system</h4>
+						<p>The goal of promoting animal shelter cannot be achieved through internal system design. Although the main users of animal shelter are the stray animals, the real operator is human being. Consequently, it is necessary for human beings to help them
+							contact with external social organizations where the holding area, the medical district and the volunteer club will play important roles with.</p>
+					</div>
+				</div>
+				<hr>
+				<h3>instead of an elegant place to live in,<br> what we think as animals is to <br>make the service running in the shelter place </h3>
+
+			</section>
+
+			<!-- plan -->
+			<section id="plan" class="main">
+				<h2>_plan</h2>
+				<h3>with public space in the intersection joints <br>the spaces are dynamic and fresh </h3>
+				<span class="image alt"><img src="images/edge-plan1.png" alt="" /></span>
+				<span class="image alt"><img src="images/edge-plan2.png" alt="" /></span>
+				<div class="row">
+					<div class="9u$ -3u 12u$(medium)">
+						<span class="image alt"><img src="images/edge-sec.png" alt="" /></span>
+					</div>
+				</div>
+			</section>
+
+			<!-- design -->
+			<section id="render" class="main black-bg">
+				<h2>_render showcase</h2>
+				<span class="image alt"><img src="images/edge-render.png" alt="" /></span>
+				<p class="grey">The second floor of the building is released to the public as a Qiantang River sightseeing stand. Every year millions of visitors will be attracted by the Qian Tang River tide, therefore the sightseeing stand will attract huge crowds and potential
+					customers for animal shelter. Walking on the trail, the sight will be effectively interacted with the hospitals on the third floor and the shelter space on the ground. Besides, the tide season, the public space is still a good choice for local residents
+					to relax and take a walk.</p>
+				<hr>
+				<h3 class="grey">we hope our in-and-out design <br>can help the public realize <br>every activity is a part of the social system,<br> shelters without considering about adoption <br>could only solve the problems on the surface</h3>
+				<span class="image alt"><img src="images/edge-final.png" alt="" /></span>
+				<p class="grey">With the increasing number of stray animals, relying solely on the expansion of the size and number of shelters is no longer plausible to solve the problem. Seeming like provide a comfortable home for the stray, it is actually increase the social
+					burden, as well as excuse for the animal abandoners. We propose to take adoption as the ultimate goal, aiming to promote virtuous circulation among human and resources, and it contributes to, and finally will, create a lasting and eternal wonderland
+					for the stray animals.</p>
+
 			</section>
 
 
@@ -151,7 +181,7 @@
 				<a href="../index.html">
 					< back to home</a>
 			</p>
-			<p class="right"> <a href="../mobile/">next project: Inforest ></a> </p>
+			<p class="right"> <a href="../mobile/">first project: QSC Mobile ></a> </p>
 
 			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
